improve mobile layout on main page. Fix horizontal scroll

--- a/src/common/components/HeroSection/HeroSection.module.css
+++ b/src/common/components/HeroSection/HeroSection.module.css
@@ -1,4 +1,3 @@
-
 .hero {
     min-height: 400px;
     background-size: cover;
@@ -9,7 +8,7 @@
     position: relative;
     width: 100vw;
     margin-left: calc(-50vw + 50%);
-    transition: all 0.3s ease;
+    overflow: hidden;
 }
 
 .container {
@@ -147,9 +146,9 @@
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 390px) {
     .hero {
-        min-height: 240px;
+        min-height: 250px;
     }
 
     .title {
